FIX scrollbar overflow

--- a/dapp/src/systems/filters/popup/GenericFiltersPopup/index.module.scss
+++ b/dapp/src/systems/filters/popup/GenericFiltersPopup/index.module.scss
@@ -19,6 +19,10 @@
 
     @extend .custom-scrollbar;
 
+    &::-webkit-scrollbar-track {
+        margin: 20px;
+    }
+
     button {
         flex-shrink: 0;
     }
